# OutbackOS

./: .gitignore  README.md  settings-diagnostics.txt
apps/browser/: BrowserBackend.h  CMakeLists.txt  Main.qml  start.html
apps/files/: Main.qml  main.cpp
apps/settings/: CMakeLists.txt  Main.qml  SystemBackend.cpp  SystemBackend.h  main.cpp
apps/terminal/: Main.qml  PtySession.cpp  PtySession.h  TerminalView.cpp
common/: CMakeLists.txt  CommandRunner.cpp  SystemBackend.cpp  SystemBackend.h  SystemLauncher.cpp  SystemLauncher.h
iso/config/: binary
iso/config/hooks/live/: 0195-enable-outback-desktop.hook.chroot  0200-build-outback-apps.hook.chroot  0200-create-outback-user.hook.chroot  0300-configure-outback.hook.chroot
iso/config/includes.chroot/etc/: hostname  issue  os-release
iso/config/includes.chroot/etc/calamares/: settings.conf
iso/config/includes.chroot/etc/calamares/branding/outback/: branding.desc  show.qml
iso/config/includes.chroot/etc/calamares/modules/: packages.conf  users.conf
iso/config/includes.chroot/etc/pam.d/: outback-lockscreen
iso/config/includes.chroot/etc/polkit-1/rules.d/: 49-outback-live.rules
iso/config/includes.chroot/etc/sddm.conf.d/: outback.conf
iso/config/includes.chroot/etc/sudoers.d/: 90-outback-live
iso/config/includes.chroot/etc/systemd/system/: outback-session.service
iso/config/includes.chroot/etc/udev/rules.d/: 90-outback-backlight.rules
iso/config/includes.chroot/etc/xdg/labwc/: autostart  rc.xml
iso/config/includes.chroot/opt/outback-src/browser/: BrowserBackend.cpp  CMakeLists.txt  main.cpp
iso/config/includes.chroot/opt/outback-src/common/: CMakeLists.txt  CommandRunner.h  SystemBackend.h  SystemLauncher.cpp  SystemLauncher.h
iso/config/includes.chroot/opt/outback-src/files/: CMakeLists.txt  FilesBackend.cpp  FilesBackend.h
iso/config/includes.chroot/opt/outback-src/settings/: CMakeLists.txt  SystemBackend.cpp  SystemBackend.h  main.cpp
iso/config/includes.chroot/opt/outback-src/shell/: CMakeLists.txt  Main.qml  SystemLauncher.cpp  main.cpp
iso/config/includes.chroot/opt/outback-src/splash/: Main.qml
iso/config/includes.chroot/opt/outback-src/taskbar/: Apps.qml  CMakeLists.txt  CalendarFlyout.qml  ForeignToplevel.cpp  ForeignToplevel.h  LockBackend.cpp  LockBackend.h  Main.qml  NotificationServer.cpp  NotificationServer.h  NotificationToastHost.qml  NotificationsAdaptor.cpp  NotificationsAdaptor.h  PinnedApps.qml  SignalBridge.h  StartMenu.qml  TaskbarPanel.qml  ToplevelManager.cpp  WindowContextMenu.qml  main.cpp
iso/config/includes.chroot/opt/outback-src/terminal/: CMakeLists.txt  Main.qml  TerminalView.cpp  TerminalView.h  main.cpp
iso/config/includes.chroot/usr/share/wayland-sessions/: outback.desktop
iso/config/package-lists/: outback-wayland-desktop.list.chroot  outback.list.chroot
shell/: CMakeLists.txt  Main.qml  SystemLauncher.cpp  SystemLauncher.h  main.cpp
splash/: CMakeLists.txt  Main.qml  main.cpp
taskbar/: AppCatalog.qml  Apps.qml  CMakeLists.txt  ForeignToplevel.cpp  ForeignToplevel.h  LockScreen.qml  Main.qml  NotificationPanel.qml  PinnedApps.qml  QuickSettingsPanel.qml  SignalBridge.cpp  StartMenu.qml  TaskbarPanel.qml  Theme.qml  ToplevelManager.h  WindowContextMenu.qml  main.cpp
